Cambios checkout y boton ayuda

--- a/view/templates/actualizar_sello.html
+++ b/view/templates/actualizar_sello.html
@@ -85,8 +85,11 @@
       });
     });
     </script>
-    
+    <a href="/ayuda" class="help-button" title="Ayuda">?</a>    
 {% include "footer.html" %}
+
+    <script src="/static/js/app.js"></script>
+    <script src="/static/js/main.js"></script>
 
   </body>
 </html>
