--- a/view/templates/albumes_subidos.html
+++ b/view/templates/albumes_subidos.html
@@ -40,7 +40,7 @@
       <a href="/eliminar_album" class="edit-btn">Eliminar álbum</a>
     </div>
   </main>
-
+  <a href="/ayuda" class="help-button" title="Ayuda">?</a>
   {% include "footer.html" %}
 
   <script>
