--- a/view/templates/generos especifico.html
+++ b/view/templates/generos especifico.html
@@ -170,6 +170,7 @@
   <script src="/static/js/generos.js"></script>
   <script src="/static/js/canciones.js"></script>
   <script src="/static/js/app.js"></script>
+  <script src="/static/js/main.js"></script>
 </body>
 </html>
 
