--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -52,7 +52,7 @@
           <a href="/gestion_sello">Gestionar sello</a>
         {% endif %}
 
-        <a href="/amigos">Gestionar amigos</a>
+        <a href="/amigos">Amigos</a>
         <a href="/logout" class="logout-link">Cerrar sesión</a>
       </div>
     </div>
