--- a/view/templates/artistas_bajo_sello.html
+++ b/view/templates/artistas_bajo_sello.html
@@ -40,7 +40,7 @@
       <a id="accion-sello" class="edit-btn">Eliminar Artista</a>
     </div>
   </main>
-
+  <a href="/ayuda" class="help-button" title="Ayuda">?</a>
   {% include "footer.html" %}
 
   <script>
