--- a/view/templates/añadir_artista.html
+++ b/view/templates/añadir_artista.html
@@ -123,7 +123,7 @@
       });
     });
     </script>
-    
+    <a href="/ayuda" class="help-button" title="Ayuda">?</a>    
 {% include "footer.html" %}
 
   </body>
