--- a/view/templates/canciones_subidas.html
+++ b/view/templates/canciones_subidas.html
@@ -40,7 +40,7 @@
       <a href="/eliminar_cancion" class="edit-btn">Eliminar cancion</a>
     </div>
   </main>
-
+  <a href="/ayuda" class="help-button" title="Ayuda">?</a>
   {% include "footer.html" %}
 
   <script>
