--- a/view/templates/crear_sello.html
+++ b/view/templates/crear_sello.html
@@ -85,7 +85,7 @@
       });
     });
     </script>
-    
+    <a href="/ayuda" class="help-button" title="Ayuda">?</a>    
 {% include "footer.html" %}
 
   </body>
