--- a/view/templates/eliminar_artista.html
+++ b/view/templates/eliminar_artista.html
@@ -181,7 +181,7 @@
       selectAlbum.appendChild(option);
     });
   </script>
-
+  <a href="/ayuda" class="help-button" title="Ayuda">?</a>
   {% include "footer.html" %}
 </body>
 </html>
