--- a/view/templates/eliminar_cancion.html
+++ b/view/templates/eliminar_cancion.html
@@ -161,7 +161,7 @@
       });
     });
   </script>
-
+  <a href="/ayuda" class="help-button" title="Ayuda">?</a>
   {% include "footer.html" %}
 </body>
 </html>
