--- a/view/templates/generos.html
+++ b/view/templates/generos.html
@@ -33,6 +33,7 @@
 
   <!-- Carga de scripts -->
   <script src="/static/js/generos.js"></script>
+  <script src="/static/js/main.js"></script>
   <script src="/static/js/app.js"></script>
 </body>
 </html>
