--- a/view/templates/subir_cancion.html
+++ b/view/templates/subir_cancion.html
@@ -144,7 +144,7 @@
       });
     });
     </script>
-    
+    <a href="/ayuda" class="help-button" title="Ayuda">?</a>    
 {% include "footer.html" %}
 
   </body>
